--- a/sample.bib
+++ b/sample.bib
@@ -1,9 +1,14 @@
-@article{greenwade93,
-    author  = "George D. Greenwade",
-    title   = "The {C}omprehensive {T}ex {A}rchive {N}etwork ({CTAN})",
-    year    = "1993",
-    journal = "TUGBoat",
-    volume  = "14",
-    number  = "3",
-    pages   = "342--351"
+@article{KRAFT,
+	author  = "Edgar Kraft",
+    title	= "A Quaternion-Based Unscented Kalman Filter for Orientation Tracking",
+    year = "2003",
+    journal = "Information Fusion, 2003. Proceedings of the Sixth International Conference of Information Fusion, 2003"
+}
+@reference{IMU_ref,
+	author = "Nikolai Antanasov",
+    title = "IMU_ref.pdf"
+}
+@datasheet{IMU,
+	title = "ArduIMU+ V2",
+    url = "https://www.sparkfun.com/products/retired/9956"
 }
